move to broadcast file

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,7 +2,7 @@ doctype html
 html
   head
     title cine.io example app
-    script(src='//cdn.cine.io/cineio.js')
+    script(src='//cdn.cine.io/cineio-broadcast.js')
     script CineIO.init("#{publicKey}")
 
   body
